Fix spacing of dates column

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -223,9 +223,9 @@ body {
   color: #0f80c6;
 }
 .panel-body strong {
-  font-family: 'Oswald', sans-serif;
-  font-weight: 400;
-  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
 }
 .panel-body .fa-lg {
   line-height: 32px;
